# violence-detection-models

./: .env.example  .gitignore  README.md  pyproject.toml  run_vit_monitor.py  run_yolo_monitor.py
violence_detection/: __init__.py  alert_tracker.py  call_service.py  paths.py  settings.py  vit_classifier_monitor.py  yolo_detector_monitor.py
